<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/common_top_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/test_word_next_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/page_lock_screen_yes"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_8"
            android:paddingTop="@dimen/dp_8"
            android:text="@string/page_learn_next"
            android:textAppearance="?android:textAppearance"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/test_word_next_tv"
            android:layout_margin="@dimen/dp_10"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@drawable/page_about_border_background" >

                <TextView
                    android:id="@+id/page_learn_tip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_weight="1.0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />

                <ImageView
                    android:id="@id/page_learn_speak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_weight="0.0"
                    android:src="@drawable/page_lock_screen_speak" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/page_learn_spell"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_weight="1.0"
                    android:background="@drawable/page_about_border_background"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/page_learn_confirm"
                    android:padding="@dimen/dp_10"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/page_learn_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_weight="0.0"
                    android:background="@drawable/page_lock_screen_yes"
                    android:gravity="center"
                    android:padding="@dimen/dp_10"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5" >

                <TextView
                    android:id="@+id/page_learn_answer"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/page_about_border_background"
                    android:gravity="center"
                    android:padding="@dimen/dp_10"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/page_lock_screen_base_1"
                    android:textSize="@dimen/sp_18" />

                <TextView
                    android:id="@+id/page_learn_show"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/page_red_button"
                    android:gravity="center"
                    android:padding="@dimen/dp_10"
                    android:text="@string/show_answer"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"
                    android:visibility="gone" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:id="@+id/test_compare_rl"
                android:layout_weight="1.0" >

                <TextView
                    android:visibility="gone"
                    android:id="@+id/compare_left_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/little_margin"
                    android:gravity="center_vertical|left"
                    android:text="@string/compare"
                    android:textColor="@color/green"
                    android:textSize="@dimen/little_font" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_marginRight="@dimen/normal_margin"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_toRightOf="@id/compare_left_tv"
                    android:orientation="vertical"
                    android:visibility="visible" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/spell_em"
                            android:textColor="@color/common_green"
                            android:textSize="@dimen/big_font" />

                        <TextView
                            android:id="@+id/compare_spell_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/little_margin"
                            android:textColor="@color/common_grey"
                            android:textSize="@dimen/big_font" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/word_em"
                            android:textColor="@color/common_green"
                            android:textSize="@dimen/big_font" />

                        <TextView
                            android:id="@+id/compare_word_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/little_margin"
                            android:textSize="@dimen/big_font" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>