<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android_custom="http://schemas.android.com/apk/res/com.android.english.learn"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/page_about_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/dp_10"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_2"
            android:layout_marginTop="@dimen/dp_2"
            android:layout_weight="0.0"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_2"
                android:layout_weight="1.0"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_weight="0.0" />

                <TextView
                    android:id="@+id/page_main_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/page_main_change"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_gravity="center"
                    android:layout_weight="0.0"
                    android:background="@drawable/page_main_change" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_2"
            android:layout_marginTop="@dimen/dp_2"
            android:layout_weight="1.0"
            android:background="@drawable/page_about_border_background"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical" >

                <com.android.english.learn.widget.DrawPieChartView
                    android:id="@+id/home_picchar_view"
                    android:layout_width="@dimen/chart_width"
                    android:layout_height="@dimen/chart_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/normal_margin"
                    android_custom:roundColor="@color/blue"
                    android_custom:roundProgressColor="@color/common_green"
                    android_custom:roundWidth="@dimen/big_margin"
                    android_custom:text="@string/page_main_learn_project"
                    android_custom:textColor="@color/black"
                    android_custom:textSize="@dimen/normal_font" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_marginRight="@dimen/normal_margin"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/page_main_review"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/little_font" />

                    <TextView
                        android:id="@+id/home_study_review_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal_font" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_marginRight="@dimen/normal_margin"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/page_main_today_new_words"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/little_font" />

                    <TextView
                        android:id="@+id/home_study_today_new_words_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal_font" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_marginRight="@dimen/normal_margin"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/page_main_complete"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/little_font" />

                    <TextView
                        android:id="@+id/home_study_complete_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal_font" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_marginRight="@dimen/normal_margin"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/page_main_remain"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/little_font" />

                    <TextView
                        android:id="@+id/home_study_remain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal_font" />
                </LinearLayout>

                <!--
                <LinearLayout
                    android:id="@+id/page_main_left"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_weight="1.0"
                    android:orientation="vertical" />

                <LinearLayout
                    android:id="@+id/page_main_right"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_weight="1.0"
                    android:orientation="vertical" />
                -->
            </LinearLayout>

            <TextView
                android:id="@+id/page_main_all_words"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.0"
                android:gravity="center"
                android:paddingBottom="@dimen/dp_5"
                android:paddingTop="@dimen/dp_5"
                android:text="@string/page_main_all_words"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/page_main_progress_font"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_weight="0.0"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/page_main_start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/page_main_start_left"
                android:gravity="center"
                android:paddingBottom="@dimen/dp_10"
                android:paddingTop="@dimen/dp_10"
                android:text="@string/page_main_start"
                android:textAppearance="?android:textAppearance"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>